c2rust/c2rust-transpile/tests/snapshots/snapshots__transpile@tenjin_guided_statics.c.2024.clang15.snap
---
source: c2rust-transpile/tests/snapshots.rs
expression: cat tests/snapshots/tenjin_guided_statics.2024.clang15.rs
---
#![allow(
    clippy::missing_safety_doc,
    dead_code,
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unsafe_op_in_unsafe_fn,
    unused_assignments,
    unused_mut
)]
static mut local: String = String::new();
static mut greeting: String = String::new();
static mut nothing: String = String::new();
static mut view: &str = "view";
static mut owned: Vec<u8> = Vec::new();
static mut zeroed: Vec<u8> = Vec::new();
#[unsafe(export_name = "use")]
pub unsafe extern "C" fn r#use(mut i: ::core::ffi::c_int) -> ::core::ffi::c_int {
    return greeting.as_bytes().get(i as usize).copied().unwrap_or(0) as ::core::ffi::c_char
        as ::core::ffi::c_int
        + nothing.is_empty() as ::core::ffi::c_int
        + view.as_bytes().get(i as usize).copied().unwrap_or(0) as ::core::ffi::c_char
            as ::core::ffi::c_int
        + owned[i as usize] as ::core::ffi::c_int
        + zeroed[i as usize] as ::core::ffi::c_int
        + local.as_bytes().get(i as usize).copied().unwrap_or(0) as ::core::ffi::c_char
            as ::core::ffi::c_int;
}
unsafe extern "C" fn c2rust_run_static_initializers() {
    greeting = String::from("hello");
    owned = vec![
        1 as ::core::ffi::c_uchar,
        2 as ::core::ffi::c_uchar,
        3 as ::core::ffi::c_uchar,
        4 as ::core::ffi::c_uchar,
    ];
    zeroed = [0; 8].to_vec();
    local = String::from("local");
}
#[used]
#[cfg_attr(target_os = "linux", unsafe(link_section = ".init_array"))]
#[cfg_attr(target_os = "windows", unsafe(link_section = ".CRT$XIB"))]
#[cfg_attr(target_os = "macos", unsafe(link_section = "__DATA,__mod_init_func"))]
static INIT_ARRAY: [unsafe extern "C" fn(); 1] = [c2rust_run_static_initializers];
