c2rust/c2rust-transpile/tests/snapshots/snapshots__transpile@tenjin_semantic_immutable_addresses.c.2024.clang15.snap
---
source: c2rust-transpile/tests/snapshots.rs
expression: cat tests/snapshots/tenjin_semantic_immutable_addresses.2024.clang15.rs
---
#![allow(
    clippy::missing_safety_doc,
    dead_code,
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unsafe_op_in_unsafe_fn,
    unused_assignments,
    unused_mut
)]
#[derive(Copy, Clone)]
#[repr(C)]
pub struct Container {
    pub scalar: ::core::ffi::c_int,
    pub values: [::core::ffi::c_int; 2],
}
#[unsafe(no_mangle)]
pub static direct_array: [::core::ffi::c_int; 2] = [0; 2];
#[unsafe(no_mangle)]
pub static record: Container = Container {
    scalar: 0,
    values: [0; 2],
};
#[unsafe(no_mangle)]
pub static record_array: [Container; 2] = [Container {
    scalar: 0,
    values: [0; 2],
}; 2];
#[unsafe(no_mangle)]
pub static mut forced_mut_array: [::core::ffi::c_int; 2] = [0; 2];
#[unsafe(no_mangle)]
pub unsafe extern "C" fn direct_array_decay() -> *mut ::core::ffi::c_int {
    return &raw const direct_array as *mut ::core::ffi::c_int;
}
#[unsafe(no_mangle)]
pub unsafe extern "C" fn direct_address() -> *mut Container {
    return &raw const record as *mut Container;
}
#[unsafe(no_mangle)]
pub unsafe extern "C" fn member_address() -> *mut ::core::ffi::c_int {
    return &raw const record.scalar as *mut ::core::ffi::c_int;
}
#[unsafe(no_mangle)]
pub unsafe extern "C" fn member_array_decay() -> *mut ::core::ffi::c_int {
    return &raw const record.values as *mut ::core::ffi::c_int;
}
#[unsafe(no_mangle)]
pub unsafe extern "C" fn subscript_address() -> *mut Container {
    return (&raw const record_array as *mut Container).offset(1 as isize);
}
#[unsafe(no_mangle)]
pub unsafe extern "C" fn nested_subscript_address() -> *mut ::core::ffi::c_int {
    return (&raw const (*(&raw const record_array as *mut Container).offset(1 as isize)).values
        as *mut ::core::ffi::c_int)
        .offset(1 as isize);
}
#[unsafe(no_mangle)]
pub unsafe extern "C" fn forced_mut_array_decay() -> *mut ::core::ffi::c_int {
    return &raw mut forced_mut_array as *mut ::core::ffi::c_int;
}
