c2rust/c2rust-transpile/tests/snapshots/snapshots__transpile@tenjin_slices.c.2021.snap
---
source: c2rust-transpile/tests/snapshots.rs
expression: cat tests/snapshots/tenjin_slices.2021.rs
---
#![allow(
    clippy::missing_safety_doc,
    dead_code,
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused_assignments,
    unused_mut
)]
#[no_mangle]
pub unsafe extern "C" fn inc(mut x: &[u8]) {
    x = &x[1..];
}
